Fixed modal window overlap issue

--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -9,12 +9,12 @@
   width: 100%;
   height: 100%;
 
-  z-index: 9;
+  z-index: 9999;
 }
 
 .modal {
   position: fixed;
-  z-index: 10;
+  z-index: 100000;
 
   top: 50%;
   left: 50%;
